Automating the process of downloading and installing tomcat 7