@@ -1,3 +1,3 @@
 #!/bin/sh
 
-# export CATALINA_OPTS=
+export CATALINA_OPTS="-Xms256m -Xmx512m -XX:MaxPermSize=128m"
